<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/service_cost"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/cost_of_service"
        android:inputType="number"
        android:padding="8dp" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp"
        android:text="@string/textView1_text"
        android:textSize="18sp" />

    <RadioGroup
        android:id="@+id/tipOptions"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Switch
            android:id="@+id/roundup_switch"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/roundup_text"
            android:textSize="14sp" />

    </RadioGroup>

    <RadioButton
        android:id="@+id/amazing_rt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/text_rd1" />

    <RadioButton
        android:id="@+id/good_rt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/text_rd2" />

    <RadioButton
        android:id="@+id/ok_rt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/text_rd3" />

    <Button
        android:id="@+id/calculate_bt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp"
        android:text="@string/calculate_bt_text" />

    <TextView
        android:id="@+id/tipAmount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end" />

</LinearLayout>